--- a/newsletter/2024-03-24.md
+++ b/newsletter/2024-03-24.md
@@ -4,7 +4,7 @@
 ![latticework illustration](https://images.unsplash.com/photo-1545987796-200677ee1011)
 *Photo by Alina Grubnyak via Unsplash*
 
-**Venture investor Chris Dixon** gets many, many things right in his recent book, a purposefully layman-friendly intro to web3 titled [Read Write Own](https://www.amazon.com/s?k=chris+dixon+read+write+own&ref=nb_sb_ss_ts-doa-p_2_12). Two ideas in particular stood out to me:
+**Venture investor Chris Dixon** gets so many things right in his recent book, a purposefully layman-friendly intro to web3 titled [Read Write Own](https://www.amazon.com/s?k=chris+dixon+read+write+own&ref=nb_sb_ss_ts-doa-p_2_12). Two ideas in particular stood out to me:
 
 1. **He repeatedly puts blockchain tech in context** of the internet's longer history and the services currently used by millions of consumers.  
 
@@ -12,23 +12,21 @@
 
 Public blockchains like Ethereum and Bitcoin are protocol networks, as were technologies like the web, email, and Real Simple Syndication (RSS) before them. The benefit of protocol technologies is that they're open source, anyone can participate, and they can only be changed by community agreement, not the whim of a small team or even just a single executive.
 
-Corporate-run networks tend to lack most or all of these characteristics. Think of any of the social apps owned by Meta, for example.
+Corporate-run networks tend to lack most or all of these characteristics. Thus building a sustainable business atop them can be difficult because corporate overlords can make changes to their networks at any time that upend your operation.
 
-Building a sustainable business atop such a network can be difficult in the long run because the corporate overlord can make changes to the network at any time that upend your operation. Dixon also points out that corporate operators over time tend to increase their "take rates," or fees charged to smaller players for using the network, sometimes to prohibitive levels.
+Dixon also points out that corporate operators over time tend to increase their "take rates," or fees charged to smaller players for using a network, sometimes to prohibitive levels.
 
-Dixon, like many other web3 advocates, sees such technology as an opportunity to return power to consumers and developers through open protocols. If the strategy works, it would effectively [revive](https://peteramckay.medium.com/back-to-the-future-with-web-3-0-bf28614e6c55) some of the early promise of the internet from the 1990s dotcom era.
+He sees web3 technology as an opportunity to return power to consumers and developers through open protocols. If the strategy works, it would effectively [revive](https://peteramckay.medium.com/back-to-the-future-with-web-3-0-bf28614e6c55) some of the egalitarian promise of the internet from the 1990s dotcom era.
 
-If you're old enough to remember that time, you know we somehow got lost along the way to the egalitarian future we thought would be our destination.
+As it happens, we saw a stark reminder of how far we've strayed from that vision on Thursday when the U.S. Department of Justice, along with 16 states' attorneys general, filed a civil antitrust suit [against Apple](https://www.msn.com/en-us/news/technology/justice-department-16-ags-sue-apple-for-monopolizing-smartphone-market/ar-BB1kiKOb) regarding the its juggernaut iPhone business.
 
-Helpfully, the U.S. Department of Justice, along with 16 states' attorneys general, reminded us of that very clearly Thursday when they [sued Apple](https://www.msn.com/en-us/news/technology/justice-department-16-ags-sue-apple-for-monopolizing-smartphone-market/ar-BB1kiKOb) for federal antitrust violations in building its juggernaut iPhone business.
-
-The Verge's Lauren Feiner [points out](https://www.theverge.com/2024/3/22/24109033/doj-apple-antitrust-lawsuit-legal-expert-praise) that government's blockbuster civil complaint seems to have taken some cues from an earlier, mostly unsuccessful suit brought by developer Epic Games against Apple alleging anticompetitive practices.
+The Verge's Lauren Feiner [points out](https://www.theverge.com/2024/3/22/24109033/doj-apple-antitrust-lawsuit-legal-expert-praise) that the government's complaint seems to have taken some cues from an earlier, mostly unsuccessful suit brought by developer Epic Games against Apple alleging anticompetitive practices.
 
 Epic's suit centered on Apple's requirement that third-party developers use its proprietary in-app purchases feature, which gives Apple a 30% take of all sales on an iPhone app, as a condition of being listed in the company's App Store.
 
-Feiner notes that the latest suit by DOJ and the states also takes a dim view of that practice. But it wraps in several other iPhone issues as well, such as its infamous incompatibility with Android messaging, to depict a broader pattern of antitrust violations by Apple.
+Feiner notes that the latest suit by DOJ and the states also takes a dim view of that practice. But it wraps in several other iPhone-related issues as well, including the device's infamous incompatibility with Android messaging, to depict a broader pattern of antitrust violations by Apple.
 
-However this case turns out, it's good to see the government finally figuring out something tech entrepreneurs realized a long time ago. For example, I was reminded this week of a colorful anecdote podcaster Tim Ferriss shared on [an episode](https://tim.blog/2018/02/06/the-tim-ferriss-show-transcripts-how-to-build-popular-podcasts-and-blogs/) of his show in 2018:
+However this case turns out, it's good to see the government finally thinking through stuff that tech entrepreneurs figured out a long time ago. For example, I was reminded this week of a colorful anecdote that podcaster Tim Ferriss shared on [an episode](https://tim.blog/2018/02/06/the-tim-ferriss-show-transcripts-how-to-build-popular-podcasts-and-blogs/) of his show in 2018:
 
 *I asked... someone I met who had a very successful business based on Facebook what it was like. He said: "It’s like owning the most profitable McDonald's in the world on top of an active volcano. You just don’t know when it’s gonna change, when it’s gonna erupt, when your business is gonna vaporize. And a lot of people have seen that. And I still use Facebook. I think it’s tremendously useful. It has ten times the click-through rate of many of the other social platforms that I’ve experimented with, so it still has a very high utility for me.*
 
