fleshing out hed + lead item

--- a/2024/2024-03-31.md
+++ b/2024/2024-03-31.md
@@ -1,42 +1,18 @@
-<!--
-
-Draft social posts...
-
--->
-
-# tktktkt
+# A final postscript to FTX's collapse
 ## tktktktk
 
 ![]()
 *Photo by tk via tk*
 
-<!-- Lede item. Should run ~450 words.
+**Most white-collar crime scandals in the U.S.** end up with two legal proceedings, played out on parallel tracks. There is a criminal case, focused on determining guilt and punishing individual wrongdoers with jail time or other penalties if necessary.
 
-Some possibilities:
+And there is a separate civil bankruptcy case in which creditors seek to recoup money from the estate of whatever company the bad guys wrecked during their scheme.
 
-- HOMEBIAS: Does it exist in tech, as in the stock market?
+FTX's meltdown in late 2022 neatly fit this pattern, with founder Sam Bankman-Fried convicted in tktktktk of criminal fraud charges. On TKTKTK, a judge sentenced Bankman-Fried to to 25 years in prison for his offenses, effectively marking the end of the criminal case. (TKTKTKTK appeal)
 
-- DIXONRIFF: His observation about protocol networks versus corporate networks is worth fleshing out. It's something you won't hear in mainstream tech media.
 
-- AI: Interesecting with crypto. Focus on how the interesection of AI and crypto is shaping up, with good, bad and inbetween examples.
-
-- SVDISRUPTION: Why should Big Tech be immune to the pattern of disruption it's brought to other industries? All its players are decades-old incumbents, subject to all the forces of stagnation we've seen elsewhere.
-
-  Founding dates and ages of the Magnificent 7 by year-end 2024:
-
-  - Microsoft: 1975   49
-  - Apple: 1976       48
-  - Nvidia: 1993      31
-  - Amazon: 1994      30
-  - Alphabet: 1998    26
-  - Tesla: 2003       21
-  - Meta: 2004        20
-
--->
 
 ### Week in Review: March 24-30, 2024
-
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
 
 - https://www.technologyreview.com/2024/03/25/1090111/tech-industry-open-source-ai-definition-problem/
 
