--- a/2024/2024-03-31.md
+++ b/2024/2024-03-31.md
@@ -1,8 +1,8 @@
 # A final postscript to FTX's collapse
-## tktktktk
+## Sam Bankman-Fried's 25-year sentence on TKTKTKT got much press attention. But let's not overlook the FTX civil bankruptcy case, which is notable in a different way.
 
-![]()
-*Photo by tk via tk*
+![FTX founder and CEO Sam Bankman-Fried](https://upload.wikimedia.org/wikipedia/commons/a/a0/Sam_Bankman-Fried.png)
+*FTX founder Sam Bankman-Fried at the Bitcoin 2021 conference. Unrevised photo courtesy of Cointelegraph via Wikimedia Commons under Creative Commons license.*
 
 **Most white-collar crime scandals in the U.S.** end up with two legal proceedings, played out on parallel tracks. There is a criminal case, focused on determining guilt and punishing individual wrongdoers with jail time or other penalties if necessary.
 
