Edits to lead item

--- a/2024/2024-03-31.md
+++ b/2024/2024-03-31.md
@@ -4,9 +4,9 @@
 ![FTX founder and CEO Sam Bankman-Fried](https://upload.wikimedia.org/wikipedia/commons/a/a0/Sam_Bankman-Fried.png)
 *FTX founder Sam Bankman-Fried at the Bitcoin 2021 conference. Unrevised photo courtesy of Cointelegraph via Wikimedia Commons under Creative Commons license.*
 
-**Most white-collar crime scandals in the U.S.** end up with two legal proceedings, played out on parallel tracks. There is a criminal case, focused on determining guilt and punishing individual wrongdoers with jail time or other penalties if necessary.
+**Most white-collar crime scandals in the U.S.** end up with two legal proceedings, played out on parallel tracks.
 
-And there is a separate civil bankruptcy case in which creditors seek to recoup money from the estate of whatever company the bad guys wrecked during their scheme.
+There is a criminal case, focused on determining guilt and punishing individual wrongdoers with jail time or other penalties if necessary. And there is a separate civil bankruptcy case in which creditors seek to recoup money from the estate of whatever company the bad guys wrecked during their scheme.
 
 FTX's meltdown in late 2022 neatly fit this pattern, with founder Sam Bankman-Fried convicted in tktktktk of criminal fraud charges. On TKTKTK, a judge sentenced Bankman-Fried to to 25 years in prison for his offenses, effectively marking the end of the criminal case. (TKTKTKTK appeal)
 
