Fleshing out lead item.

--- a/2024/2024-03-31.md
+++ b/2024/2024-03-31.md
@@ -1,14 +1,24 @@
 # A final postscript to FTX's collapse
-## Sam Bankman-Fried's 25-year sentence on TKTKTKT got much press attention. But let's not overlook the FTX civil bankruptcy case, which is notable in a different way.
 
 ![FTX founder and CEO Sam Bankman-Fried](https://upload.wikimedia.org/wikipedia/commons/a/a0/Sam_Bankman-Fried.png)
 *FTX founder Sam Bankman-Fried at the Bitcoin 2021 conference. Unrevised photo courtesy of Cointelegraph via Wikimedia Commons under Creative Commons license.*
 
-**Most white-collar crime scandals in the U.S.** end up with two legal proceedings, played out on parallel tracks.
+**The legal wrangling over FTX** is winding down, but as a public relations disaster, the crypto industry will have to deal with its fallout for years to come.
 
-There is a criminal case, focused on determining guilt and punishing individual wrongdoers with jail time or other penalties if necessary. And there is a separate civil bankruptcy case in which creditors seek to recoup money from the estate of whatever company the bad guys wrecked during their scheme.
+We saw a significant milestone Thursday as Sam Bankman-Fried, the defunct exchange's ex-CEO and founder, was [sentenced to 25 years in prison](https://www.coindesk.com/policy/2024/03/29/sbf-is-going-to-prison-for-25-years/) by a federal judge in New York for defrauding FTX's investors. Except for a possible appeal in which he may try to get that punishment shortened, the criminal component of the FTX debacle is now effectively over.
 
-FTX's meltdown in late 2022 neatly fit this pattern, with founder Sam Bankman-Fried convicted in tktktktk of criminal fraud charges. On TKTKTK, a judge sentenced Bankman-Fried to to 25 years in prison for his offenses, effectively marking the end of the criminal case. (TKTKTKTK appeal)
+Intriguingly (and with less press coverage), the civil bankruptcy case in which creditors are trying to recoup money from FTX in a Delaware courtroom has taken [a surprising turn](https://www.cnbc.com/2024/02/10/as-sam-bankman-fried-awaits-jail-ftx-customers-await-full-repayment.html) as well: The FTX estate's lawyers say they expect to be able to repay all the creditors in full, in U.S. dollar terms.
+
+That qualifier is itself a source of contention as some creditors [claim](https://www.wired.com/story/ftx-bankruptcy-bitcoin-value/) they are due an even bigger payout, considering the crypto market's torrid rally in recent months.
+
+For the 99-plus percent of us who aren't litigants involved in the case, though, the bigger point may be that if FTX ends up paying out anything even remotely resembling parity, that would be nearly miracle by the standards of past financial debacles on Wall Street. All the more so considering the estate is so certain at such a relatively early date, just over a year since FTX went under.
+
+By comparison, a federally supervised compensation fund set up for Bernie Madoff's victims announced in December, more than *15 years* after Madoff's stock-market scam was revealed, that it had finally reached a 90% payout rate for victim's losses.
+
+In many other Wall Street fraud cases, victims end up recovering just pennies on the dollar. I covered one like that -- the bankruptcy of the commodity brokerage Refco -- for the Wall Street Journal in 2004.
+
+In retrospect, Refco had a lot of parallels to FTX: It specialized in transacting exotic, more speculative investments 
+
 
 
 
@@ -28,8 +38,9 @@ FTX's meltdown in late 2022 neatly fit this pattern, with founder Sam Bankman-Fr
 
 ### Odds & Ends
 
-- tk
-- tk
+- https://nymag.com/intelligencer/article/have-we-already-found-alien-life.html
+
+- https://www.coindesk.com/tech/2024/03/29/call-of-duty-cheaters-allegedly-lose-their-bitcoin-as-hackers-target-gamers-with-malware/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
