--- a/2024/2024-03-31.md
+++ b/2024/2024-03-31.md
@@ -1,4 +1,5 @@
 # A final postscript to FTX's collapse
+## As Sam Bankman-Fried faces 25 years in prison, FTX creditors' recovery could be surprisingly large
 
 ![FTX founder and CEO Sam Bankman-Fried](https://upload.wikimedia.org/wikipedia/commons/a/a0/Sam_Bankman-Fried.png)
 *FTX founder Sam Bankman-Fried at the Bitcoin 2021 conference. Unrevised photo courtesy of Cointelegraph via Wikimedia Commons under Creative Commons license.*
@@ -7,40 +8,37 @@
 
 We saw a significant milestone Thursday as Sam Bankman-Fried, the defunct exchange's ex-CEO and founder, was [sentenced to 25 years in prison](https://www.coindesk.com/policy/2024/03/29/sbf-is-going-to-prison-for-25-years/) by a federal judge in New York for defrauding FTX's investors. Except for a possible appeal in which he may try to get that punishment shortened, the criminal component of the FTX debacle is now effectively over.
 
-Intriguingly (and with less press coverage), the civil bankruptcy case in which creditors are trying to recoup money from FTX in a Delaware courtroom has taken [a surprising turn](https://www.cnbc.com/2024/02/10/as-sam-bankman-fried-awaits-jail-ftx-customers-await-full-repayment.html) as well: The FTX estate's lawyers say they expect to be able to repay all the creditors in full, in U.S. dollar terms.
+Intriguingly (and with much less press coverage), the civil bankruptcy case in which creditors are trying to recoup money from FTX in a Delaware courtroom has taken [a surprising turn](https://www.cnbc.com/2024/02/10/as-sam-bankman-fried-awaits-jail-ftx-customers-await-full-repayment.html) as well: The FTX estate's lawyers say they expect to be able to repay all the creditors in full, in U.S. dollar terms.
 
 That qualifier is itself a source of contention as some creditors [claim](https://www.wired.com/story/ftx-bankruptcy-bitcoin-value/) they are due an even bigger payout, considering the crypto market's torrid rally in recent months.
 
-For the 99-plus percent of us who aren't litigants involved in the case, though, the bigger point may be that if FTX ends up paying out anything even remotely resembling parity, that would be nearly miracle by the standards of past financial debacles on Wall Street. All the more so considering the estate is so certain at such a relatively early date, just over a year since FTX went under.
+For the 99-plus percent of us who aren't litigants involved in the case, though, the bigger point may be that if FTX ends up paying anything even remotely resembling parity, and if they do it in a reasonable timeframe, that would be a miracle by the standards of past financial debacles on Wall Street.
 
-By comparison, a federally supervised compensation fund set up for Bernie Madoff's victims announced in December, more than *15 years* after Madoff's stock-market scam was revealed, that it had finally reached a 90% payout rate for victim's losses.
+By comparison, a federally supervised compensation fund set up for Bernie Madoff's victims announced in December -- more than *15 years* after Madoff's stock-market scam was revealed -- that it had [finally reached](https://www.cnbc.com/2023/12/11/bernie-madoff-victims-get-159-million-from-ponzi-recovery-fund.html) a 90% payout rate for victim's losses.
 
-In many other Wall Street fraud cases, victims end up recovering just pennies on the dollar. I covered one like that -- the bankruptcy of the commodity brokerage Refco -- for the Wall Street Journal in 2004.
+In many other Wall Street fraud cases, victims end up recovering just pennies on the dollar. By the time regulators discover improprieties, clients' money has effectively been lost forever via actual market losses that weren't properly disclosed by the people managing their money.
 
-In retrospect, Refco had a lot of parallels to FTX: It specialized in transacting exotic, more speculative investments 
-
-
-
+At least by those sorry standards, the FTX creditors can't help but come out well here.
 
 ### Week in Review: March 24-30, 2024
 
-- https://www.technologyreview.com/2024/03/25/1090111/tech-industry-open-source-ai-definition-problem/
+- **The tech industry can't agree** on a definition of what constitutes truly "open source" AI. ([MIT Technology Review](https://www.technologyreview.com/2024/03/25/1090111/tech-industry-open-source-ai-definition-problem/))
 
-- https://www.theblock.co/post/284591/bakkt-226-million-net-losses
+- **Yikes.** ChatGPT seems to be neatly replicating humans' propensity for job discrimination, after training on datasets we created and used to train it. Sigh. ([Business Insider](https://www.msn.com/en-us/money/markets/don-t-expect-chatgpt-to-take-the-bias-out-of-job-recruiting-just-yet/ar-BB1jzn1C))
 
-- New bitcoin ETF launching. <!-- Need link. Bianco tweeted news about this. Hmmm... -->
+- **U.S. investors have one more exchange-traded fund** on bitcoin at their disposal after Hashdex gained regulatory approval to convert its fund holding bitcoin futures to one that holds the token itself. There are now 11 such "spot" bitcoin funds available in the U.S. ([CoinDesk](https://www.msn.com/en-us/money/markets/us-has-its-eleventh-spot-bitcoin-etf-after-hashdex-fund-conversion/ar-BB1kDX7X))
 
-- ChatGPT seems to be perfectly replicating human-created job discrimination. https://www.bloomberg.com/graphics/2024-openai-gpt-hiring-racial-discrimination/ <!-- This Bloomberg link runs smack into a paywall. Need to replace with a more user-friendly one. -->
+- **The London Stock Exchange** said it will launch a new market for exchange-traded notes pegged to bitcoin and ether in late May. ([CoinDesk](https://www.coindesk.com/business/2024/03/25/london-stock-exchange-will-start-market-for-bitcoin-and-ether-etns-may-28/))
 
-- The London Stock Exchange will list exchange-traded notes pegged to bitcoin and ether beginning May 28. ([CoinDesk](https://www.coindesk.com/business/2024/03/25/london-stock-exchange-will-start-market-for-bitcoin-and-ether-etns-may-28/))
+- **SWIFT,** the major proprietary network for traditional bank transactions globally, is planning to launch a new platform for central bank digital currencies. ([Reuters](https://www.reuters.com/business/finance/swift-planning-launch-new-central-bank-digital-currency-platform-12-24-months-2024-03-25/))
 
-- SWIFT is planning a new platform for CBDCs. ([Reuters](https://www.reuters.com/business/finance/swift-planning-launch-new-central-bank-digital-currency-platform-12-24-months-2024-03-25/))
+- **Bakkt**, a popular crypto custody and trading platform, reported a $226 million net loss for 2023. ([The Block](https://www.theblock.co/post/284591/bakkt-226-million-net-losses))
 
 ### Odds & Ends
 
-- https://nymag.com/intelligencer/article/have-we-already-found-alien-life.html
+- **New York Magazine** summarized all the evidence scientists have gathered that [could suggest](https://nymag.com/intelligencer/article/have-we-already-found-alien-life.html) the existence of alien life. (Though none of it constitutes definitive proof yet.)
 
-- https://www.coindesk.com/tech/2024/03/29/call-of-duty-cheaters-allegedly-lose-their-bitcoin-as-hackers-target-gamers-with-malware/
+- **A mysterious group of hackers** has created malware to steal bitcoin from people cheating on the video Game Call of Duty. ([CoinDesk](https://www.coindesk.com/tech/2024/03/29/call-of-duty-cheaters-allegedly-lose-their-bitcoin-as-hackers-target-gamers-with-malware/))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
