Fleshing out art, summary items

--- a/2024/2024-04-07.md
+++ b/2024/2024-04-07.md
@@ -1,49 +1,86 @@
-<!--
-
-Draft social posts...
-
--->
-
 # tktktktktk
 ## tktktktk
 
-![]()
-*Photo by tk via tk*
+![Wall Street signs in New York](https://images.unsplash.com/photo-1586815634274-bf5eb51055c9)
+*Photo by lo lo via Unsplash*
 
-<!-- Lede item. Should run ~450 words.
+<!-- Lede item. Should run ~450 words...
 
-Some possibilities:
-
-- HOMEBIAS: Does it exist in tech, as in the stock market?
-
-- AI: Interesecting with crypto. Focus on how the interesection of AI and crypto is shaping up, with good, bad and inbetween examples.
-
-- SVDISRUPTION: Why should Big Tech be immune to the pattern of disruption it's brought to other industries? All its players are decades-old incumbents, subject to all the forces of stagnation we've seen elsewhere.
-
-  Founding dates and ages of the Magnificent 7 by year-end 2024:
-
-  - Microsoft: 1975   49
-  - Apple: 1976       48
-  - Nvidia: 1993      31
-  - Amazon: 1994      30
-  - Alphabet: 1998    26
-  - Tesla: 2003       21
-  - Meta: 2004        20
+WALLST: The story of crypto's integration with tradfi is interesting on other fronts beside the launch of bitcoin ETFs. Write a short intro/outro, with min-wrapup list inbetween covering finance industry links below...
 
 -->
 
 ### Week in Review: March 31 to April 6, 2024
 
-<!-- Prompt: Leo, please summarize the news article in this browser tab. I'm looking for a paragraph of 2-3 conversational sentences, suitable to use in a newsletter I'm working on. -->
+<!-- Ready to go... -->
 
-- tk
-- tk
-- tk
+- **Meta's experiments** in augmented and virtual reality have lost $40 billion since the company changed its name from Facebook. However, the company still posted record profits in its latest quarterly reports due to income from a more familiar source -- selling ads against user-generated content on its social platforms. ([Cointelegraph](https://cointelegraph.com/news/meta-metaverse-lab-lost-40-b-since-facebook-changed-its-name-in-2021))
+
+<!-- Some musts... -->
+
+- https://www.ccn.com/news/chinese-public-blockchain-belt-road-initiative/ | https://watcher.guru/news/brics-china-unveils-blockchain-project-to-end-us-dollar-in-trade
+
+- https://www.coinspeaker.com/us-states-cardano-foundation-blockchain-voting-platform/
+
+- **Coachella is integrating NFTs.** | https://decrypt.co/224551/coachella-avalanche-nft-quests-game-music-festival | https://decrypt.co/224523/billie-eilish-nicki-minaj-pearl-jam-protest-ai-in-music | https://venturebeat.com/games/coachella-and-avalanche-create-web3-loyalty-game-for-coachella-quests/
+
+- **Trouble among the exchanges:** https://decrypt.co/224602/nigeria-working-with-interpol-to-extradite-binance-exec-who-escaped-detention-report | https://www.axios.com/2024/04/0/changpeng-zhao-binance-sentencing-cryptocurrency | Investors are fleeing KuCoin. https://decrypt.co/224654/crypto-investors-flee-kucoin-criminal-conspiracy-charges
+
+- https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs | https://www.coindesk.com/policy/2024/04/03/us-sec-calls-for-comments-on-spot-eth-etfs/
+
+- **Bitcoin ETF updates:** BlackRock might flip Grayscale among bitcoin ETFs, https://decrypt.co/224524/bitcoin-etf-blackrock-flip-grayscale
+
+- WSJ's Zuckerman says Goldman still hates crypto: https://www.wsj.com/finance/currencies/bitcoin-price-goldman-01189443?st=1syfipngazxcnvu&reflink=desktopwebshare_permalink
+
+- https://www.fool.com/investing/2024/04/03/43-of-survey-respondents-say-they-plan-to-buy-cryp/
+
+- https://www.theblock.co/post/286311/paradigm-backed-startup-vana-launches-dao-letting-reddit-users-control-their-personal-data
+
+- https://www.theblock.co/post/286378/galaxy-digital-to-launch-100-million-fund-for-early-stage-crypto-companies-report | https://www.coindesk.com/business/2024/04/03/galaxy-plans-to-raise-100m-for-first-crypto-venture-fund/
+
+- <!-- From NYT: An A.I. Researcher Takes On Election Deepfakes: Oren Etzioni was once an optimist about artificial intelligence. Now, his nonprofit, TrueMedia.org, is offering tools for fighting A.I.-manipulated content. --> https://www.nytimes.com/2024/04/02/technology/an-ai-researcher-takes-on-election-deepfakes.html
+
+- **Memecoin coverage:** https://www.coingecko.com/research/publications/most-profitable-crypto-narratives | https://blockworks.co/news/crypto-leaders-insist-on-memecoin-utility
+
+<!-- Candidates -->
+
+- https://cointelegraph.com/news/bis-7-central-banks-explore-asset-tokenization-project-agora
+
+- https://www.coindesk.com/consensus-magazine/2024/04/03/for-crypto-the-global-regulatory-olympics-has-already-begun/
+
+- https://decrypt.co/224581/ark-invests-bitcoin-etf-sees-87-million-net-outflows-overtaking-gbtc
+
+- https://slate.com/news-and-politics/2024/04/tiktok-ban-update-trump-senate-campaign-donors.html
+
+- https://www.coindesk.com/business/2024/04/03/cathie-wood-attributes-bitcoins-rise-to-national-currency-devaluations/
+
+- https://cointelegraph.com/magazine/phishing-crypto-erc-20-bait-scammers/
+
+- https://cointelegraph.com/news/24-million-staked-sol-stuck-lido-smart-contract-bug
+
+- https://prospect.org/politics/2024-04-03-staying-power-crypto-political-machine/
+
+- https://www.coindesk.com/markets/2024/04/03/are-you-too-late-to-crypto/
+
+- https://decrypt.co/224670/how-much-shib-shiba-inu-founder-ryoshi-hold
+
+- https://www.theblock.co/post/286291/solana-zeus-network-funding-token-valuation
+
+- https://www.theblock.co/post/286267/minecraft-inspired-crypto-game-hytopia-launching-beta-after-8-million-node-sale
+
+- https://www.forbes.com/sites/digital-assets/2024/04/02/how-ai-and-blockchain-can-revolutionize-the-internet-as-we-know-it/?sh=a69a5f42d692
+
+- https://www.forbes.com/sites/nimrodlehavi/2024/04/03/the-hackers-are-back--defi-needs-to-be-ready-to-defend-itself/?sh=67397b273dc6
 
 ### Odds & Ends
 
-- tk
-- tk
+- https://www.wired.com/story/faruk-ozer-turkey-crypto-fraud/
+
+- https://coingape.com/ai-integration-and-blockchain-to-propel-web3-adoption/
+
+- https://www.nytimes.com/2024/04/03/technology/personaltech/iphone-android-ios-apple.html
+
+- https://decrypt.co/224081/the-winners-circle-is-bringing-horse-racing-to-a-new-generation-of-web3-fans
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
