Fleshing out lede item

--- a/2024/2024-04-07.md
+++ b/2024/2024-04-07.md
@@ -1,14 +1,26 @@
-# tktktktktk
-## tktktktk
+# What's the followup to bitcoin ETFs?
+## U.S.-listed bitcoin funds have been a big hit. Now Wall Street is flirting with other crypto offerings.
 
 ![Wall Street signs in New York](https://images.unsplash.com/photo-1586815634274-bf5eb51055c9)
 *Photo by lo lo via Unsplash*
 
-<!-- Lede item. Should run ~450 words...
+**Exchange-traded funds** that allow U.S. investors to buy and sell bitcoin via their conventional accounts with stockbrokers have unquestionably been a big hit since gaining regulatory approval in January. <!-- Find, add link... -->
 
-WALLST: The story of crypto's integration with tradfi is interesting on other fronts beside the launch of bitcoin ETFs. Write a short intro/outro, with min-wrapup list inbetween covering finance industry links below...
+Now Wall Street is exploring other crypto-related offerings, hoping that customers' appetite for the bitcoin ETF may translate into other products as well.
 
--->
+Firms are proposing new instruments that either integrate blockchain technology directly or, like the bitcoin ETFs, enable bets on the direction of token prices. But there are early signs that some of these products could also face resistance from the public, regulators, or certain corners of the financial industry itself in the months ahead.
+
+The latest:
+
+- Ether ETF https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs | https://www.coindesk.com/policy/2024/04/03/us-sec-calls-for-comments-on-spot-eth-etfs/ | https://www.reuters.com/technology/cryptoverse-ether-fettered-by-fate-spot-etf-proposals-2024-04-02/
+
+- BlackRock RWA: BlackRock might flip Grayscale among bitcoin ETFs, https://decrypt.co/224524/bitcoin-etf-blackrock-flip-grayscale | https://www.coindesk.com/consensus-magazine/2024/02/02/real-world-asset-tokenization-is-fake-news/ | https://www.forbes.com/sites/nataliakarayaneva/2024/03/21/blackrocks-10-trillion-tokenization-vision-the-future-of-real-world-assets/?sh=463e106e535c | https://finance.yahoo.com/news/blackrock-enters-asset-tokenization-race-233701485.html |
+
+- WSJ's Zuckerman says Goldman still hates crypto: https://www.wsj.com/finance/currencies/bitcoin-price-goldman-01189443?st=1syfipngazxcnvu&reflink=desktopwebshare_permalink
+
+- https://www.fool.com/investing/2024/04/03/43-of-survey-respondents-say-they-plan-to-buy-cryp/
+
+- https://www.theblock.co/post/286378/galaxy-digital-to-launch-100-million-fund-for-early-stage-crypto-companies-report | https://www.coindesk.com/business/2024/04/03/galaxy-plans-to-raise-100m-for-first-crypto-venture-fund/
 
 ### Week in Review: March 31 to April 6, 2024
 
@@ -26,17 +38,7 @@ WALLST: The story of crypto's integration with tradfi is interesting on other fr
 
 - **Trouble among the exchanges:** https://decrypt.co/224602/nigeria-working-with-interpol-to-extradite-binance-exec-who-escaped-detention-report | https://www.axios.com/2024/04/0/changpeng-zhao-binance-sentencing-cryptocurrency | Investors are fleeing KuCoin. https://decrypt.co/224654/crypto-investors-flee-kucoin-criminal-conspiracy-charges
 
-- https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs | https://www.coindesk.com/policy/2024/04/03/us-sec-calls-for-comments-on-spot-eth-etfs/
-
-- **Bitcoin ETF updates:** BlackRock might flip Grayscale among bitcoin ETFs, https://decrypt.co/224524/bitcoin-etf-blackrock-flip-grayscale
-
-- WSJ's Zuckerman says Goldman still hates crypto: https://www.wsj.com/finance/currencies/bitcoin-price-goldman-01189443?st=1syfipngazxcnvu&reflink=desktopwebshare_permalink
-
-- https://www.fool.com/investing/2024/04/03/43-of-survey-respondents-say-they-plan-to-buy-cryp/
-
 - https://www.theblock.co/post/286311/paradigm-backed-startup-vana-launches-dao-letting-reddit-users-control-their-personal-data
-
-- https://www.theblock.co/post/286378/galaxy-digital-to-launch-100-million-fund-for-early-stage-crypto-companies-report | https://www.coindesk.com/business/2024/04/03/galaxy-plans-to-raise-100m-for-first-crypto-venture-fund/
 
 - <!-- From NYT: An A.I. Researcher Takes On Election Deepfakes: Oren Etzioni was once an optimist about artificial intelligence. Now, his nonprofit, TrueMedia.org, is offering tools for fighting A.I.-manipulated content. --> https://www.nytimes.com/2024/04/02/technology/an-ai-researcher-takes-on-election-deepfakes.html
 
@@ -72,15 +74,21 @@ WALLST: The story of crypto's integration with tradfi is interesting on other fr
 
 - https://www.forbes.com/sites/nimrodlehavi/2024/04/03/the-hackers-are-back--defi-needs-to-be-ready-to-defend-itself/?sh=67397b273dc6
 
-### Odds & Ends
-
-- https://www.wired.com/story/faruk-ozer-turkey-crypto-fraud/
 
 - https://coingape.com/ai-integration-and-blockchain-to-propel-web3-adoption/
 
+- https://slate.com/human-interest/2024/04/yearly-tuition-hike-colleges-universities-yale-boston.html
+
 - https://www.nytimes.com/2024/04/03/technology/personaltech/iphone-android-ios-apple.html
 
+
+### Odds & Ends
+
 - https://decrypt.co/224081/the-winners-circle-is-bringing-horse-racing-to-a-new-generation-of-web3-fans
+
+- https://www.salon.com/2024/04/04/they-decided-to-get-even-with-him-revenge-against-julian-assange-broke-the-media/
+
+- **Yikes.** https://www.wired.com/story/faruk-ozer-turkey-crypto-fraud/
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please join our email list.**_
 
