Fleshing out news summaries

--- a/2024/2024-04-07.md
+++ b/2024/2024-04-07.md
@@ -1,34 +1,30 @@
 # What's the followup to bitcoin ETFs?
-## U.S.-listed bitcoin funds have been a big hit. Now Wall Street is flirting with other crypto offerings.
+## Now that U.S.-listed bitcoin funds are a big hit, Wall Street is flirting with other crypto offerings.
 
 ![Wall Street signs in New York](https://images.unsplash.com/photo-1586815634274-bf5eb51055c9)
 *Photo by lo lo via Unsplash*
 
-**Exchange-traded funds** that allow U.S. investors to buy and sell bitcoin via their conventional accounts with stockbrokers have unquestionably been a big hit since gaining regulatory approval in January. <!-- Find, add link... -->
+**Exchange-traded funds** that allow U.S. investors to buy and sell bitcoin via their conventional accounts with stockbrokers have unquestionably been a big hit since gaining regulatory approval in January. <!-- Find, add link... --> Now Wall Street is exploring other crypto-related offerings, hoping customers' appetite for bitcoin funds may translate elsewhere.
 
-Now Wall Street is exploring other crypto-related offerings, hoping that customers' appetite for the bitcoin ETF may translate into other products as well.
-
-Firms are proposing new instruments that either integrate blockchain technology directly or, like the bitcoin ETFs, enable bets on the direction of token prices. But there are early signs that some of these products could also face resistance from the public, regulators, or certain corners of the financial industry itself in the months ahead.
+Firms are proposing new instruments that either integrate blockchain technology directly or, like the bitcoin ETFs, enable financial bets on the direction of token prices. But there are early signs that some of these products could also face resistance from the public, regulators, or certain corners of the financial industry itself in the months ahead.
 
 The latest:
 
-- Ether ETF https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs | https://www.coindesk.com/policy/2024/04/03/us-sec-calls-for-comments-on-spot-eth-etfs/ | https://www.reuters.com/technology/cryptoverse-ether-fettered-by-fate-spot-etf-proposals-2024-04-02/
+- **The Securities and Exchange Commission** opened a public comment period Tuesday for proposals by Grayscale, Bitwise, and Fidelity to offer [ETFs that hold ether](https://www.theblock.co/post/286255/sec-asks-for-public-comment-for-grayscale-bitwise-and-fidelity-spot-ethereum-etfs), the crypto market's number-two token. Some analysts are worried, however, that such funds might face additional regulatory hurdles due to the Ethereum network's staking system, which offers token holders bond-like yield paid in ether tokens. [Reuters reports](https://www.reuters.com/technology/cryptoverse-ether-fettered-by-fate-spot-etf-proposals-2024-04-02/) that worries about ETF approval may be holding ether's price performance in check lately. It's up more than 50% so far this year -- about 10 percentage points bitcoin less than bitcoin's return.
 
-- BlackRock RWA: BlackRock might flip Grayscale among bitcoin ETFs, https://decrypt.co/224524/bitcoin-etf-blackrock-flip-grayscale | https://www.coindesk.com/consensus-magazine/2024/02/02/real-world-asset-tokenization-is-fake-news/ | https://www.forbes.com/sites/nataliakarayaneva/2024/03/21/blackrocks-10-trillion-tokenization-vision-the-future-of-real-world-assets/?sh=463e106e535c | https://finance.yahoo.com/news/blackrock-enters-asset-tokenization-race-233701485.html |
+- **BlackRock,** already a [major player](https://decrypt.co/224524/bitcoin-etf-blackrock-flip-grayscale) in the bitcoin ETF market, is pushing ahead with plans to launch an Ethereum-based platform to [tokenize real-world assets](https://finance.yahoo.com/news/blackrock-enters-asset-tokenization-race-233701485.html) such as real estate and artwork as well. The CEO of the new project, dubbed Securitize, tells Forbes that BlackRock aims to [tokenize $10 trillion](https://www.forbes.com/sites/nataliakarayaneva/2024/03/21/blackrocks-10-trillion-tokenization-vision-the-future-of-real-world-assets/?sh=463e106e535c) in assets, enabling them to be traded on-chain.
 
-- WSJ's Zuckerman says Goldman still hates crypto: https://www.wsj.com/finance/currencies/bitcoin-price-goldman-01189443?st=1syfipngazxcnvu&reflink=desktopwebshare_permalink
+- **In a recent investor survey** by the news site Motley Fool, a record [43% of respondents](https://www.fool.com/investing/2024/04/03/43-of-survey-respondents-say-they-plan-to-buy-cryp/) said they were either "likely" or "very likely" to invest in crypto in 2024.
 
-- https://www.fool.com/investing/2024/04/03/43-of-survey-respondents-say-they-plan-to-buy-cryp/
+- **Goldman Sachs is skeptical, though.** My old Wall Street Journal colleague Greg Zuckerman reports that Sharmin Mossavar-Rahmani, chief investment officer for Goldman's wealth management unit, remains ardently [bearish on bitcoin](https://www.wsj.com/finance/currencies/bitcoin-price-goldman-01189443?st=1syfipngazxcnvu&reflink=desktopwebshare_permalink). Hmmmm...
 
-- https://www.theblock.co/post/286378/galaxy-digital-to-launch-100-million-fund-for-early-stage-crypto-companies-report | https://www.coindesk.com/business/2024/04/03/galaxy-plans-to-raise-100m-for-first-crypto-venture-fund/
+- **New York-based Galaxy Digital** is planning to launch a new $100 million venture fund that will back 30 crypto startups over the next three years. ([The Block](https://www.theblock.co/post/286378/galaxy-digital-to-launch-100-million-fund-for-early-stage-crypto-companies-report))
+
+Happily, the week also saw a lot of notable tech-related news away from Wall Street. Let's get to some of those headlines as well...
 
 ### Week in Review: March 31 to April 6, 2024
 
-<!-- Ready to go... -->
-
-- **Meta's experiments** in augmented and virtual reality have lost $40 billion since the company changed its name from Facebook. However, the company still posted record profits in its latest quarterly reports due to income from a more familiar source -- selling ads against user-generated content on its social platforms. ([Cointelegraph](https://cointelegraph.com/news/meta-metaverse-lab-lost-40-b-since-facebook-changed-its-name-in-2021))
-
-<!-- Some musts... -->
+- **Meta's experiments** in augmented and virtual reality have lost $40 billion since the company changed its name from Facebook. However, the company still posted record profits in its latest quarterly reports due to income from a more familiar source -- sellig ads against user-generated content on its social platforms. ([Cointelegraph](https://cointelegraph.com/news/meta-metaverse-lab-lost-40-b-since-facebook-changed-its-name-in-2021))
 
 - https://www.ccn.com/news/chinese-public-blockchain-belt-road-initiative/ | https://watcher.guru/news/brics-china-unveils-blockchain-project-to-end-us-dollar-in-trade
 
